// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`normalizeString 1`] = `"1abc23-\\\\+l"`;

exports[`normalizeString 2`] = `"\\\\?a=2"`;

exports[`normalizeString 3`] = `"\\\\?a=2&b=3&c"`;

exports[`normalizeString 4`] = `"a=@2&b=3/\\\\*!&c"`;

exports[`parseQuery 1`] = `Object {}`;

exports[`parseQuery 2`] = `
Object {
  "a": "2",
}
`;

exports[`parseQuery 3`] = `
Object {
  "a": "2",
  "b": "3",
  "c": "",
}
`;

exports[`parseQuery 4`] = `
Object {
  "a": "2",
  "b": "3",
  "c": "",
}
`;
